<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.test.navigationdrawer1.FormReportFragment">
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:weightSum="1">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_descripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorAccent">

            <EditText
                android:id="@+id/input_descripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_desc"
                android:textColor="@color/colorAccent"
                android:maxLines="1"
                android:inputType="text"
                android:imeOptions="actionDone" />

        </android.support.design.widget.TextInputLayout>

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/image_report_btn"
            android:text="@string/action_add_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:backgroundTint="@color/colorAccent"/>

        <ImageView
            android:id="@+id/image_report_imageview"
            android:src="@mipmap/ic_placeholder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/publish_report_btn"
            android:text="@string/action_publish_report"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:backgroundTint="@color/colorAccent"/>
    </LinearLayout>
</ScrollView>
